# heycli

./: Cargo.toml  README.md
src/: api.rs  app_commands.rs  func.rs  main.rs  notif_commands.rs
