[package]
name = "heycli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.14", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
